Packaging options and internet permissions

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -171,6 +171,7 @@ bBundleLanguageSplit=True
 bBundleDensitySplit=True
 ExtraApplicationSettings=
 ExtraActivitySettings=
++ExtraPermissions=android.permission.INTERNET
 bAndroidVoiceEnabled=False
 +PackageForOculusMobile=Quest
 bRemoveOSIG=True
@@ -248,3 +249,4 @@ bRecenterHMDWithController=True
 bChromaCorrection=False
 CPULevel=2
 GPULevel=3
+
