Moving project to server-client model

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -126,10 +126,10 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/Blueprints/NectoGameInstance.NectoGameInstance_C
 GameDefaultMap=/Game/test_map.test_map
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/BrowserGamemode.BrowserGamemode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
