adding multicast support to android

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -172,9 +172,13 @@ bBundleDensitySplit=True
 ExtraApplicationSettings=
 ExtraActivitySettings=
 +ExtraPermissions=android.permission.INTERNET
++ExtraPermissions=android.permission.ACCESS_WIFI_STATE
++ExtraPermissions=android.permission.ACCESS_NETWORK_STATE
++ExtraPermissions=android.permission.CHANGE_WIFI_MULTICAST_STATE
 bAndroidVoiceEnabled=False
 +PackageForOculusMobile=Quest
 bRemoveOSIG=True
++GoogleVRCaps=Daydream33
 bGoogleVRSustainedPerformance=False
 KeyStore=
 KeyAlias=
