--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,11 +86,19 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="VR_Trigger_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Click)
 +ActionMappings=(ActionName="VR_Trigger_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Trigger_Click)
 +ActionMappings=(ActionName="VR_Grip_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Grip_Click)
-+ActionMappings=(ActionName="VR_Grip_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_ThumbPinch)
 +ActionMappings=(ActionName="VR_Grip_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Grip_Click)
-+ActionMappings=(ActionName="VR_Grip_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_ThumbPinch)
 +ActionMappings=(ActionName="VR_Trigger_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Trigger_Click)
 +ActionMappings=(ActionName="VR_Trigger_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Trigger_Click)
++ActionMappings=(ActionName="ThumbPinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_ThumbPinch)
++ActionMappings=(ActionName="ThumbPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_ThumbPinch)
++ActionMappings=(ActionName="IndexPinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_IndexPinch)
++ActionMappings=(ActionName="IndexPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_IndexPinch)
++ActionMappings=(ActionName="MiddlePinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_MiddlePinch)
++ActionMappings=(ActionName="MiddlePinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_MiddlePinch)
++ActionMappings=(ActionName="RingPinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_RingPinch)
++ActionMappings=(ActionName="RingPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_RingPinch)
++ActionMappings=(ActionName="PinkyPinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_PinkPinch)
++ActionMappings=(ActionName="PinkyPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_PinkPinch)
 +AxisMappings=(AxisName="VR_Grip_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
 +AxisMappings=(AxisName="VR_Grip_R_Axis",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
 +AxisMappings=(AxisName="VR_Trigger_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
