All pinches working, and can now join by scaling the server beacon

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,6 +9,10 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/NectoQuest")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/NectoQuest")
+SmallFontName=/Game/Roboto.Roboto
+TinyFontName=/Game/Roboto.Roboto
+MediumFontName=/Game/Roboto.Roboto
+LargeFontName=/Game/Roboto.Roboto
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
