--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -266,3 +266,6 @@ OneEuroCutoffSlope=0.007000
 OneEuroDeltaCutoff=1.000000
 +ControllerProfiles=(ControllerName="Test",SocketOffsetTransform=(Rotation=(X=0.000000,Y=0.000000,Z=0.000000,W=1.000000),Translation=(X=0.000000,Y=0.000000,Z=0.000000),Scale3D=(X=1.000000,Y=1.000000,Z=1.000000)),bUseSeperateHandOffsetTransforms=False,SocketOffsetTransformRightHand=(Rotation=(X=0.000000,Y=0.000000,Z=0.000000,W=1.000000),Translation=(X=0.000000,Y=0.000000,Z=0.000000),Scale3D=(X=1.000000,Y=1.000000,Z=1.000000)),AxisOverrides=(),ActionOverrides=())
 
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
+
