Adding multiplayer host/join lobby

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -131,7 +131,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/NectoGameInstance.NectoGameInstance_C
-GameDefaultMap=/Game/test_map.test_map
+GameDefaultMap=/Game/lobby.lobby
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BrowserGamemode.BrowserGamemode_C
 GlobalDefaultServerGameMode=None
