Adding session support

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -65,6 +65,8 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="/Game/lobby")
++MapsToCook=(FilePath="/Game/mp_session")
 +DirectoriesToAlwaysCook=(Path="/OculusVR")
 +DirectoriesToAlwaysCook=(Path="/ShowtimeUnreal")
 
