--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -99,6 +99,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="RingPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_RingPinch)
 +ActionMappings=(ActionName="PinkyPinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_PinkPinch)
 +ActionMappings=(ActionName="PinkyPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_PinkPinch)
++ActionMappings=(ActionName="NewActionMapping_0",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="VR_Grip_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="VR_Grip_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 +AxisMappings=(AxisName="VR_Grip_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
 +AxisMappings=(AxisName="VR_Grip_R_Axis",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
 +AxisMappings=(AxisName="VR_Trigger_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
