--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -122,7 +122,7 @@ r.SupportMaterialLayers=False
 r.LightPropagationVolume=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/test_map.test_map
+EditorStartupMap=/Game/mp_session.mp_session
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -132,8 +132,8 @@ FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/NectoGameInstance.NectoGameInstance_C
 GameDefaultMap=/Game/lobby.lobby
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/BrowserGamemode.BrowserGamemode_C
+ServerDefaultMap=/Game/lobby.lobby
+GlobalDefaultGameMode=/Game/Blueprints/ShowtimeCLient_GM.ShowtimeClient_GM_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
@@ -267,5 +267,7 @@ OneEuroDeltaCutoff=1.000000
 +ControllerProfiles=(ControllerName="Test",SocketOffsetTransform=(Rotation=(X=0.000000,Y=0.000000,Z=0.000000,W=1.000000),Translation=(X=0.000000,Y=0.000000,Z=0.000000),Scale3D=(X=1.000000,Y=1.000000,Z=1.000000)),bUseSeperateHandOffsetTransforms=False,SocketOffsetTransformRightHand=(Rotation=(X=0.000000,Y=0.000000,Z=0.000000,W=1.000000),Translation=(X=0.000000,Y=0.000000,Z=0.000000),Scale3D=(X=1.000000,Y=1.000000,Z=1.000000)),AxisOverrides=(),ActionOverrides=())
 
 [/Script/UnrealEd.CookerSettings]
-bCookOnTheFlyForLaunchOn=True
+bCookOnTheFlyForLaunchOn=False
 
+[OnlineSubsystem]
+DefaultPlatformService=Null
