Working finger pinch pivots for grips.
Moving hand tracking code and resources into plugin

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -69,4 +69,5 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/mp_session")
 +DirectoriesToAlwaysCook=(Path="/OculusVR")
 +DirectoriesToAlwaysCook=(Path="/ShowtimeUnreal")
++DirectoriesToAlwaysCook=(Path="/HandTracking")
 
