WIP attempting network syncing hand poses

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -12,6 +12,9 @@ FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
++NativizeBlueprintAssets=(FilePath="/HandTracking/Blueprints/Animation/LeftHand_Remote")
++NativizeBlueprintAssets=(FilePath="/HandTracking/Blueprints/Animation/RightHand_Remote")
++NativizeBlueprintAssets=(FilePath="/HandTracking/Blueprints/Animation/RightHand_PoseAnim")
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
