Intial (barely) working prototype of networked hands. Fingers wiggle but rotations are wrong

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -112,6 +112,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="VR_Trigger_R_Axis",Scale=1.000000,Key=Vive_Right_Trigger_Axis)
 +AxisMappings=(AxisName="VR_Grip_L_Axis",Scale=1.000000,Key=OculusHand_Left_ThumbPinchStrength)
 +AxisMappings=(AxisName="VR_Grip_R_Axis",Scale=1.000000,Key=OculusHand_Right_ThumbPinchStrength)
++AxisMappings=(AxisName="MoveX_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
++AxisMappings=(AxisName="MoveX_L_Axis",Scale=1.000000,Key=Vive_Left_Trackpad_X)
++AxisMappings=(AxisName="MoveY_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
++AxisMappings=(AxisName="MoveY_L_Axis",Scale=1.000000,Key=Vive_Left_Trackpad_Y)
++AxisMappings=(AxisName="MoveX_R_Axis",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_X)
++AxisMappings=(AxisName="MoveX_R_Axis",Scale=1.000000,Key=Vive_Right_Trackpad_X)
++AxisMappings=(AxisName="MoveY_R_Axis",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_Y)
++AxisMappings=(AxisName="MoveY_R_Axis",Scale=1.000000,Key=Vive_Right_Trackpad_Y)
 DefaultTouchInterface=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
