--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -68,8 +68,8 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="/Game/lobby")
-+MapsToCook=(FilePath="/Game/mp_session")
++MapsToCook=(FilePath="/Game/Maps/lobby")
++MapsToCook=(FilePath="/Game/Maps/mp_session")
 +DirectoriesToAlwaysCook=(Path="/OculusVR")
 +DirectoriesToAlwaysCook=(Path="/ShowtimeUnreal")
 +DirectoriesToAlwaysCook=(Path="/HandTracking")
