WIP arc teleporter but hand poses aren't being tracked correctly any more

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -330,3 +330,9 @@ DefaultPlatformService=Null
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/NavigationSystem.RecastNavMesh]
+CellSize=5.000000
+AgentRadius=25.000000
+AgentHeight=180.000000
+bDrawPolyEdges=False
+
