WIP attempting to launch on Quest 2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
+TargetedHardwareClass=EHardwareClass::Mobile
 AppliedTargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Scalable
+DefaultGraphicsPerformance=EGraphicsPreset::Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/Engine.Engine]
@@ -17,7 +17,7 @@ LargeFontName=/Game/Roboto.Roboto
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
 r.Shadow.CSM.MaxMobileCascades=2
-r.MobileMSAA=1
+r.MobileMSAA=4
 r.Mobile.UseLegacyShadingModel=False
 r.Mobile.AllowDitheredLODTransition=False
 r.Mobile.AllowSoftwareOcclusion=False
@@ -107,11 +107,11 @@ r.SupportSkyAtmosphereAffectsHeightFog=False
 r.SkinCache.CompileShaders=False
 r.SkinCache.DefaultBehavior=1
 r.SkinCache.SceneMemoryLimitInMB=128.000000
-r.Mobile.EnableStaticAndCSMShadowReceivers=False
+r.Mobile.EnableStaticAndCSMShadowReceivers=True
 r.Mobile.EnableMovableLightCSMShaderCulling=True
-r.Mobile.AllowDistanceFieldShadows=False
-r.Mobile.AllowMovableDirectionalLights=False
-r.MobileNumDynamicPointLights=0
+r.Mobile.AllowDistanceFieldShadows=True
+r.Mobile.AllowMovableDirectionalLights=True
+r.MobileNumDynamicPointLights=4
 r.MobileDynamicPointLightsUseStaticBranch=True
 r.Mobile.EnableMovableSpotlights=False
 r.GPUSkin.Support16BitBoneIndex=False
@@ -181,6 +181,7 @@ ExtraActivitySettings=
 +ExtraPermissions=android.permission.CHANGE_WIFI_MULTICAST_STATE
 bAndroidVoiceEnabled=False
 +PackageForOculusMobile=Quest
++PackageForOculusMobile=Quest2
 bRemoveOSIG=True
 +GoogleVRCaps=Daydream33
 bGoogleVRSustainedPerformance=False
