--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -70,6 +70,7 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/lobby")
 +MapsToCook=(FilePath="/Game/Maps/mp_session")
++MapsToCook=(FilePath="/Game/Maps/empty")
 +DirectoriesToAlwaysCook=(Path="/OculusVR")
 +DirectoriesToAlwaysCook=(Path="/ShowtimeUnreal")
 +DirectoriesToAlwaysCook=(Path="/HandTracking")
