Fixed launch failure on Quest 2 by cleaning up some meshes/functions

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,10 +9,10 @@ AppliedDefaultGraphicsPerformance=Scalable
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/NectoQuest")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/NectoQuest")
-SmallFontName=/Game/Roboto.Roboto
-TinyFontName=/Game/Roboto.Roboto
-MediumFontName=/Game/Roboto.Roboto
-LargeFontName=/Game/Roboto.Roboto
+SmallFontName=/Engine/EngineFonts/SmallFont.SmallFont
+TinyFontName=/Engine/EngineFonts/RobotoTiny.RobotoTiny
+MediumFontName=/Engine/EngineFonts/Roboto.Roboto
+LargeFontName=/Engine/VREditor/Fonts/VRText_RobotoLarge.VRText_RobotoLarge
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
