Fixed elbow IK and restricted finger bones to rotation only (placeholder)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,8 +6,8 @@ ProjectID=A511802E48CAA0FEBAEB9A8E667CA256
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=
-StagingDirectory=(Path="")
+BuildTarget=NectoQuest
+StagingDirectory=(Path="E:/Code/UnrealProjects/NectoXR/Build")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -74,4 +74,5 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/OculusVR")
 +DirectoriesToAlwaysCook=(Path="/ShowtimeUnreal")
 +DirectoriesToAlwaysCook=(Path="/HandTracking")
++DirectoriesToAlwaysStageAsNonUFS=(Path="ShowtimeUnreal")
 
