Working fingers in UBIK anim blueprint
Fixed Copy Poseable Mesh class to allow for overriden parent bones and different transformation spaces

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -197,7 +197,7 @@ bSupportsVulkan=True
 bSupportsVulkanSM5=False
 bDetectVulkanByDefault=True
 bBuildWithHiddenSymbolVisibility=False
-bSaveSymbols=False
+bSaveSymbols=True
 bForceLDLinker=False
 bEnableGooglePlaySupport=False
 bUseGetAccounts=False
