Features and fixes
Teleportation fades (Quest compatible). UBIK mannequin fingers properly mapped to Oculus Hand finger positions. Pawn cleanup.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -259,6 +259,7 @@ bChromaCorrection=False
 CPULevel=2
 GPULevel=3
 bRequiresSystemKeyboard=True
+bPhaseSync=True
 
 [/Script/VRExpansionPlugin.VRGlobalSettings]
 MaxCCDPasses=1
