--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,11 +11,13 @@ pool:
 
 steps:
 - script: |
-    sudo apt-get install python3 python3-dev python3-pip
+    sudo apt-get install python3 python3-dev python3-pip python3-setuptools
+
     sudo pip3 install ue4-docker
     sudo ue4-docker setup
+
     ue4-docker build 4.26.0 --no-engine
     ue4-docker clean --source
-    ue4 build
+    # ue4 build
 
   displayName: 'Setup ue4 docker'
