Added physics hands to mannequin.
Fixed engine stall in UPhysicalAnimationComponent by setting a.ParallelAnimEvaluation to 0.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,6 +13,7 @@ SmallFontName=/Engine/EngineFonts/SmallFont.SmallFont
 TinyFontName=/Engine/EngineFonts/RobotoTiny.RobotoTiny
 MediumFontName=/Engine/EngineFonts/Roboto.Roboto
 LargeFontName=/Engine/VREditor/Fonts/VRText_RobotoLarge.VRText_RobotoLarge
+bAllowMultiThreadedAnimationUpdate=True
 
 [/Script/Engine.RendererSettings]
 r.Mobile.DisableVertexFog=True
@@ -338,3 +339,5 @@ AgentRadius=25.000000
 AgentHeight=180.000000
 bDrawPolyEdges=False
 
+[SystemSettings]
+a.ParallelAnimEvaluation = "0"
