--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,15 +6,16 @@ ProjectID=A511802E48CAA0FEBAEB9A8E667CA256
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
-BuildTarget=NectoQuest
+BuildTarget=NectoQuestServer
 StagingDirectory=(Path="E:/Code/UnrealProjects/NectoXR/Build")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
-BlueprintNativizationMethod=Disabled
+BlueprintNativizationMethod=Exclusive
 +NativizeBlueprintAssets=(FilePath="/HandTracking/Blueprints/Animation/LeftHand_Remote")
 +NativizeBlueprintAssets=(FilePath="/HandTracking/Blueprints/Animation/RightHand_Remote")
 +NativizeBlueprintAssets=(FilePath="/HandTracking/Blueprints/Animation/RightHand_PoseAnim")
++NativizeBlueprintAssets=(FilePath="/Game/Blueprints/Animation/NectoUBIK_Anim_BP")
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
