Fixed Necto pawn not working on dedicated server
Added more autonomous pawn checks in pawn tick

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -33,6 +33,7 @@ HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
 bShareMaterialShaderCode=True
+bDeterministicShaderCodeOrder=False
 bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
@@ -75,5 +76,6 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/OculusVR")
 +DirectoriesToAlwaysCook=(Path="/ShowtimeUnreal")
 +DirectoriesToAlwaysCook=(Path="/HandTracking")
++DirectoriesToAlwaysCook=(Path="/Morpheus")
 +DirectoriesToAlwaysStageAsNonUFS=(Path="ShowtimeUnreal")
 
