--- a/NectoQuest.uproject
+++ b/NectoQuest.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{F94906A2-45B8-BCEB-55BD-F0AF15BD01AE}",
+	"EngineAssociation": "{C35DC4EC-4DF9-1A29-B1C9-45BDECAB66F3}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -38,15 +38,6 @@
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/c61d1941c8664436be42d649404a10e0"
 		},
 		{
-			"Name": "SteamVR",
-			"Enabled": false,
-			"SupportedTargetPlatforms": [
-				"Win32",
-				"Win64",
-				"Linux"
-			]
-		},
-		{
 			"Name": "OculusOpenXR",
 			"Enabled": true,
 			"SupportedTargetPlatforms": [
@@ -73,6 +64,15 @@
 				"Win64",
 				"Android",
 				"HoloLens"
+			]
+		},
+		{
+			"Name": "OculusVR",
+			"Enabled": false,
+			"SupportedTargetPlatforms": [
+				"Win32",
+				"Win64",
+				"Android"
 			]
 		}
 	],
