WIP Removing Oculus and SteamVR plugins

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -159,6 +159,7 @@ bDisableVerifyOBBOnStartUp=False
 bForceSmallOBBFiles=False
 bAllowLargeOBBFiles=True
 bAllowPatchOBBFile=False
+bAllowOverflowOBBFiles=False
 bUseExternalFilesDir=False
 bPublicLogFiles=True
 Orientation=SensorLandscape
@@ -180,10 +181,10 @@ ExtraActivitySettings=
 +ExtraPermissions=android.permission.ACCESS_WIFI_STATE
 +ExtraPermissions=android.permission.ACCESS_NETWORK_STATE
 +ExtraPermissions=android.permission.CHANGE_WIFI_MULTICAST_STATE
-bAndroidVoiceEnabled=False
-+PackageForOculusMobile=Quest
+bAndroidVoiceEnabled=True
 +PackageForOculusMobile=Quest2
-bRemoveOSIG=True
++PackageForOculusMobile=Quest
+bRemoveOSIG=False
 +GoogleVRCaps=Daydream33
 bGoogleVRSustainedPerformance=False
 KeyStore=
@@ -196,6 +197,7 @@ bBuildForX8664=False
 bBuildForES31=False
 bSupportsVulkan=True
 bSupportsVulkanSM5=False
+bAndroidOpenGLSupportsBackbufferSampling=False
 bDetectVulkanByDefault=True
 bBuildWithHiddenSymbolVisibility=False
 bSaveSymbols=True
@@ -225,6 +227,7 @@ OcclusionPlugin=
 CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
 bUseAudioStreamCaching=False
 CacheSizeKB=0
+MaxChunkSizeOverrideKB=0
 bResampleForDevice=False
 SoundCueCookQualityIndex=-1
 MaxSampleRate=0.000000
@@ -244,23 +247,7 @@ TextureFormatPriority_DXT=0.600000
 TextureFormatPriority_ASTC=0.900000
 SDKAPILevelOverride=
 NDKAPILevelOverride=
-
-[/Script/OculusHMD.OculusHMDRuntimeSettings]
-bLateLatching=True
-HandTrackingSupport=ControllersAndHands
-FFRLevel=FFR_Low
-FFRDynamic=True
-bHQDistortion=False
-bAutoEnabled=True
-bEnableSpecificColorGamut=True
-ColorSpace=Quest
-bFocusAware=True
-bRecenterHMDWithController=True
-bChromaCorrection=False
-CPULevel=2
-GPULevel=3
-bRequiresSystemKeyboard=True
-bPhaseSync=True
+bStreamLandscapeMeshLODs=False
 
 [/Script/VRExpansionPlugin.VRGlobalSettings]
 MaxCCDPasses=1
@@ -341,3 +328,4 @@ bDrawPolyEdges=False
 
 [SystemSettings]
 a.ParallelAnimEvaluation = "0"
+
