--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -7,7 +7,7 @@ ProjectID=A511802E48CAA0FEBAEB9A8E667CA256
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=NectoQuestServer
-StagingDirectory=(Path="E:/Code/UnrealProjects/NectoXR/Build")
+StagingDirectory=(Path="C:/Code/UnrealProjects/Necto/Build")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -73,9 +73,9 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/lobby")
 +MapsToCook=(FilePath="/Game/Maps/mp_session")
 +MapsToCook=(FilePath="/Game/Maps/empty")
-+DirectoriesToAlwaysCook=(Path="/OculusVR")
++DirectoriesToAlwaysCook=(Path="/OpenXR")
 +DirectoriesToAlwaysCook=(Path="/ShowtimeUnreal")
 +DirectoriesToAlwaysCook=(Path="/HandTracking")
++DirectoriesToAlwaysCook=(Path="/Morpheus/MorpheusTransformorph")
 +DirectoriesToAlwaysCook=(Path="/Morpheus")
-+DirectoriesToAlwaysStageAsNonUFS=(Path="ShowtimeUnreal")
 
