Project compiles for OpenXR but only shows black image on Quest

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -7,6 +7,8 @@
 -AxisConfig=(AxisKeyName="Gamepad_RightY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
 -AxisConfig=(AxisKeyName="MouseX",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
 -AxisConfig=(AxisKeyName="MouseY",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
+-AxisConfig=(AxisKeyName="Mouse2D",AxisProperties=(DeadZone=0.f,Exponent=1.f,Sensitivity=0.07f))
++AxisConfig=(AxisKeyName="Mouse2D",AxisProperties=(DeadZone=0.000000,Sensitivity=0.070000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
 +AxisConfig=(AxisKeyName="Gamepad_RightX",AxisProperties=(DeadZone=0.250000,Sensitivity=1.000000,Exponent=1.000000,bInvert=False))
@@ -81,48 +83,18 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="VR_Grip_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
-+ActionMappings=(ActionName="VR_Grip_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
-+ActionMappings=(ActionName="VR_Trigger_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Click)
-+ActionMappings=(ActionName="VR_Trigger_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Trigger_Click)
-+ActionMappings=(ActionName="VR_Grip_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Grip_Click)
-+ActionMappings=(ActionName="VR_Grip_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Grip_Click)
-+ActionMappings=(ActionName="VR_Trigger_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Trigger_Click)
-+ActionMappings=(ActionName="VR_Trigger_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Trigger_Click)
-+ActionMappings=(ActionName="ThumbPinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_ThumbPinch)
-+ActionMappings=(ActionName="ThumbPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_ThumbPinch)
-+ActionMappings=(ActionName="IndexPinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_IndexPinch)
-+ActionMappings=(ActionName="IndexPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_IndexPinch)
-+ActionMappings=(ActionName="MiddlePinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_MiddlePinch)
-+ActionMappings=(ActionName="MiddlePinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_MiddlePinch)
-+ActionMappings=(ActionName="RingPinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_RingPinch)
-+ActionMappings=(ActionName="RingPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_RingPinch)
-+ActionMappings=(ActionName="PinkyPinch_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Left_PinkPinch)
-+ActionMappings=(ActionName="PinkyPinch_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusHand_Right_PinkPinch)
-+ActionMappings=(ActionName="VR_Grip_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="VR_Grip_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="Thumbstick_L_Touch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Touch)
-+ActionMappings=(ActionName="Thumbstick_R_Touch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Touch)
-+ActionMappings=(ActionName="Thumbstick_L",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Click)
-+ActionMappings=(ActionName="Thumbstick_R",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Click)
-+AxisMappings=(AxisName="VR_Grip_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
-+AxisMappings=(AxisName="VR_Grip_R_Axis",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
-+AxisMappings=(AxisName="VR_Trigger_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
-+AxisMappings=(AxisName="VR_Trigger_R_Axis",Scale=1.000000,Key=OculusTouch_Right_Trigger_Axis)
-+AxisMappings=(AxisName="VR_Grip_L_Axis",Scale=1.000000,Key=Vive_Left_Grip_Click)
-+AxisMappings=(AxisName="VR_Grip_R_Axis",Scale=1.000000,Key=Vive_Right_Grip_Click)
-+AxisMappings=(AxisName="VR_Trigger_L_Axis",Scale=1.000000,Key=Vive_Left_Trigger_Axis)
-+AxisMappings=(AxisName="VR_Trigger_R_Axis",Scale=1.000000,Key=Vive_Right_Trigger_Axis)
-+AxisMappings=(AxisName="VR_Grip_L_Axis",Scale=1.000000,Key=OculusHand_Left_ThumbPinchStrength)
-+AxisMappings=(AxisName="VR_Grip_R_Axis",Scale=1.000000,Key=OculusHand_Right_ThumbPinchStrength)
-+AxisMappings=(AxisName="MoveX_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_X)
-+AxisMappings=(AxisName="MoveX_L_Axis",Scale=1.000000,Key=Vive_Left_Trackpad_X)
-+AxisMappings=(AxisName="MoveY_L_Axis",Scale=1.000000,Key=OculusTouch_Left_Thumbstick_Y)
-+AxisMappings=(AxisName="MoveY_L_Axis",Scale=1.000000,Key=Vive_Left_Trackpad_Y)
-+AxisMappings=(AxisName="MoveX_R_Axis",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_X)
-+AxisMappings=(AxisName="MoveX_R_Axis",Scale=1.000000,Key=Vive_Right_Trackpad_X)
-+AxisMappings=(AxisName="MoveY_R_Axis",Scale=1.000000,Key=OculusTouch_Right_Thumbstick_Y)
-+AxisMappings=(AxisName="MoveY_R_Axis",Scale=1.000000,Key=Vive_Right_Trackpad_Y)
++ActionMappings=(ActionName="Squeeze_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Grip_Click)
++ActionMappings=(ActionName="Squeeze_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Grip_Click)
++ActionMappings=(ActionName="Select_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Trigger_Axis)
++ActionMappings=(ActionName="Select_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Trigger_Axis)
++ActionMappings=(ActionName="Squeeze_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
++ActionMappings=(ActionName="Squeeze_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
++ActionMappings=(ActionName="Select_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Click)
++ActionMappings=(ActionName="Select_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Trigger_Click)
++ActionMappings=(ActionName="Teleport_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Click)
++ActionMappings=(ActionName="Teleport_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Click)
+DefaultPlayerInputClass=/Script/Engine.PlayerInput
+DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
