--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -146,10 +146,10 @@ StoreVersion=1
 StoreVersionOffsetArmV7=0
 StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
-ApplicationDisplayName=
+ApplicationDisplayName=Necto
 VersionDisplayName=1.0
-MinSDKVersion=25
-TargetSDKVersion=25
+MinSDKVersion=29
+TargetSDKVersion=29
 InstallLocation=InternalOnly
 bEnableGradle=True
 bEnableLint=False
@@ -184,7 +184,7 @@ ExtraActivitySettings=
 bAndroidVoiceEnabled=True
 +PackageForOculusMobile=Quest2
 +PackageForOculusMobile=Quest
-bRemoveOSIG=False
+bRemoveOSIG=True
 +GoogleVRCaps=Daydream33
 bGoogleVRSustainedPerformance=False
 KeyStore=
@@ -328,4 +328,21 @@ bDrawPolyEdges=False
 
 [SystemSettings]
 a.ParallelAnimEvaluation = "0"
+
+[/Script/OculusHMD.OculusHMDRuntimeSettings]
+bLateLatching=True
+HandTrackingSupport=ControllersAndHands
+FFRLevel=FFR_Low
+FFRDynamic=True
+bHQDistortion=False
+bAutoEnabled=True
+bEnableSpecificColorGamut=True
+ColorSpace=Quest
+bFocusAware=True
+bRecenterHMDWithController=True
+bChromaCorrection=False
+CPULevel=2
+GPULevel=3
+bRequiresSystemKeyboard=True
+bPhaseSync=True
 
