--- a/NectoQuest.uproject
+++ b/NectoQuest.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{C35DC4EC-4DF9-1A29-B1C9-45BDECAB66F3}",
+	"EngineAssociation": "{F94906A2-45B8-BCEB-55BD-F0AF15BD01AE}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
@@ -103,16 +103,6 @@
 			"Enabled": false
 		},
 		{
-			"Name": "OpenXRMsftHandInteraction",
-			"Enabled": true,
-			"SupportedTargetPlatforms": [
-				"Win32",
-				"Win64",
-				"HoloLens",
-				"Android"
-			]
-		},
-		{
 			"Name": "SteamVR",
 			"Enabled": false,
 			"SupportedTargetPlatforms": [
@@ -120,6 +110,10 @@
 				"Win64",
 				"Linux"
 			]
+		},
+		{
+			"Name": "XRVisualization",
+			"Enabled": true
 		}
 	],
 	"TargetPlatforms": [
