OpenXR working on Quest

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -148,7 +148,7 @@ StoreVersionOffsetArm64=0
 StoreVersionOffsetX8664=0
 ApplicationDisplayName=Necto
 VersionDisplayName=1.0
-MinSDKVersion=29
+MinSDKVersion=25
 TargetSDKVersion=29
 InstallLocation=InternalOnly
 bEnableGradle=True
@@ -328,6 +328,8 @@ bDrawPolyEdges=False
 
 [SystemSettings]
 a.ParallelAnimEvaluation = "0"
+;vr.bEnableHMD=True
+;vr.bEnableStereo=True
 
 [/Script/OculusHMD.OculusHMDRuntimeSettings]
 bLateLatching=True
