WIP livelink handtracking
See https://github.com/EpicGames/UnrealEngine/pull/7730

--- a/NectoQuest.uproject
+++ b/NectoQuest.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{F94906A2-45B8-BCEB-55BD-F0AF15BD01AE}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
