--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -76,3 +76,21 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/ShowtimeUnreal")
 +DirectoriesToAlwaysCook=(Path="/HandTracking")
 
+[/Script/LiveLink.LiveLinkSettings]
+-DefaultRoleSettings=(Role=Class'/Script/LiveLink.LiveLinkAnimationRole', FrameInterpolationProcessor=Class'/Script/LiveLink.LiveLinkAnimationFrameInterpolationProcessor')
++DefaultRoleSettings=(Role=Class'"/Script/LiveLinkInterface.LiveLinkAnimationRole"',SettingClass=Class'"/Script/LiveLinkInterface.LiveLinkSubjectSettings"',FrameInterpolationProcessor=Class'"/Script/LiveLink.LiveLinkAnimationFrameInterpolationProcessor"',FramePreProcessors=)
+FrameInterpolationProcessor=Class'/Script/LiveLink.LiveLinkBasicFrameInterpolationProcessor'
+DefaultLiveLinkPreset=/Game/UE4_Mannequin_Mobile/Remaps/MannequinHandtrackingLivelinkPreset.MannequinHandtrackingLivelinkPreset
+PresetSaveDir=(Path="/Game/UE4_Mannequin_Mobile/Remaps")
+ClockOffsetCorrectionStep=0.000100
+DefaultMessageBusSourceMode=EngineTime
+MessageBusPingRequestFrequency=1.000000
+MessageBusHeartbeatFrequency=1.000000
+MessageBusHeartbeatTimeout=2.000000
+MessageBusTimeBeforeRemovingInactiveSource=30.000000
+TimeWithoutFrameToBeConsiderAsInvalid=0.500000
+ValidColor=(R=0.000000,G=1.000000,B=0.000000,A=1.000000)
+InvalidColor=(R=1.000000,G=1.000000,B=0.000000,A=1.000000)
+TextSizeSource=16
+TextSizeSubject=12
+
