--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -83,16 +83,30 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Squeeze_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Grip_Click)
-+ActionMappings=(ActionName="Squeeze_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Grip_Click)
-+ActionMappings=(ActionName="Select_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Trigger_Axis)
-+ActionMappings=(ActionName="Select_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Trigger_Axis)
-+ActionMappings=(ActionName="Squeeze_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
-+ActionMappings=(ActionName="Squeeze_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
-+ActionMappings=(ActionName="Select_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Trigger_Click)
-+ActionMappings=(ActionName="Select_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Trigger_Click)
-+ActionMappings=(ActionName="Teleport_Left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Click)
-+ActionMappings=(ActionName="Teleport_Right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Thumbstick_Click)
++ActionMappings=(ActionName="teleport_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Thumbstick_Click)
++ActionMappings=(ActionName="teleport_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Trackpad_Click)
++ActionMappings=(ActionName="teleport_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Thumbstick_Click)
++ActionMappings=(ActionName="teleport_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Thumbstick_Click)
++ActionMappings=(ActionName="grab_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
++ActionMappings=(ActionName="grab_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Grip_Axis)
++ActionMappings=(ActionName="grab_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Grip_Click)
++ActionMappings=(ActionName="grab_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Grip_Click)
++ActionMappings=(ActionName="menu_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Menu_Click)
++ActionMappings=(ActionName="menu_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Menu_Click)
++ActionMappings=(ActionName="menu_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Menu_Click)
++ActionMappings=(ActionName="menu_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_System_Click)
++ActionMappings=(ActionName="grab_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Grip_Click)
++ActionMappings=(ActionName="grab_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Grip_Click)
++ActionMappings=(ActionName="grab_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
++ActionMappings=(ActionName="grab_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Right_Grip_Axis)
++AxisMappings=(AxisName="select_left",Scale=1.000000,Key=Vive_Left_Trigger_Axis)
++AxisMappings=(AxisName="select_left",Scale=1.000000,Key=MixedReality_Left_Trigger_Axis)
++AxisMappings=(AxisName="select_left",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
++AxisMappings=(AxisName="select_left",Scale=1.000000,Key=ValveIndex_Left_Trigger_Axis)
++AxisMappings=(AxisName="select_right",Scale=1.000000,Key=Vive_Right_Trigger_Axis)
++AxisMappings=(AxisName="select_right",Scale=1.000000,Key=MixedReality_Right_Trigger_Axis)
++AxisMappings=(AxisName="select_right",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
++AxisMappings=(AxisName="select_right",Scale=1.000000,Key=ValveIndex_Right_Trigger_Axis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
