WIP Pinch tracking events firing
Boxes still teleporting who knows where...

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -87,18 +87,18 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="teleport_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Trackpad_Click)
 +ActionMappings=(ActionName="teleport_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Thumbstick_Click)
 +ActionMappings=(ActionName="teleport_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Thumbstick_Click)
-+ActionMappings=(ActionName="grab_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
-+ActionMappings=(ActionName="grab_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Grip_Axis)
-+ActionMappings=(ActionName="grab_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Grip_Click)
-+ActionMappings=(ActionName="grab_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Grip_Click)
++ActionMappings=(ActionName="grip_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Grip_Click)
++ActionMappings=(ActionName="grip_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_Grip_Axis)
++ActionMappings=(ActionName="grip_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Grip_Click)
++ActionMappings=(ActionName="grip_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Grip_Click)
 +ActionMappings=(ActionName="menu_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Left_Menu_Click)
 +ActionMappings=(ActionName="menu_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Left_Menu_Click)
 +ActionMappings=(ActionName="menu_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Left_Menu_Click)
 +ActionMappings=(ActionName="menu_left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Left_System_Click)
-+ActionMappings=(ActionName="grab_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Grip_Click)
-+ActionMappings=(ActionName="grab_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Grip_Click)
-+ActionMappings=(ActionName="grab_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
-+ActionMappings=(ActionName="grab_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Right_Grip_Axis)
++ActionMappings=(ActionName="grip_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Vive_Right_Grip_Click)
++ActionMappings=(ActionName="grip_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MixedReality_Right_Grip_Click)
++ActionMappings=(ActionName="grip_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouch_Right_Grip_Click)
++ActionMappings=(ActionName="grip_right",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=ValveIndex_Right_Grip_Axis)
 +AxisMappings=(AxisName="select_left",Scale=1.000000,Key=Vive_Left_Trigger_Axis)
 +AxisMappings=(AxisName="select_left",Scale=1.000000,Key=MixedReality_Left_Trigger_Axis)
 +AxisMappings=(AxisName="select_left",Scale=1.000000,Key=OculusTouch_Left_Trigger_Axis)
@@ -107,6 +107,14 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="select_right",Scale=1.000000,Key=MixedReality_Right_Trigger_Axis)
 +AxisMappings=(AxisName="select_right",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
 +AxisMappings=(AxisName="select_right",Scale=1.000000,Key=ValveIndex_Right_Trigger_Axis)
++AxisMappings=(AxisName="grip_left",Scale=1.000000,Key=Vive_Left_Grip_Click)
++AxisMappings=(AxisName="grip_right",Scale=1.000000,Key=Vive_Right_Grip_Click)
++AxisMappings=(AxisName="grip_left",Scale=1.000000,Key=MixedReality_Left_Grip_Click)
++AxisMappings=(AxisName="grip_left",Scale=1.000000,Key=OculusTouch_Left_Grip_Axis)
++AxisMappings=(AxisName="grip_left",Scale=1.000000,Key=ValveIndex_Left_Grip_Axis)
++AxisMappings=(AxisName="grip_right",Scale=1.000000,Key=MixedReality_Right_Grip_Click)
++AxisMappings=(AxisName="grip_right",Scale=1.000000,Key=OculusTouch_Right_Grip_Axis)
++AxisMappings=(AxisName="grip_right",Scale=1.000000,Key=ValveIndex_Right_Grip_Axis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
