WIP hololens support and new hand models.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -134,7 +134,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/NectoGameInstance.NectoGameInstance_C
 GameDefaultMap=/Game/Maps/lobby.lobby
 ServerDefaultMap=/Game/Maps/mp_session.mp_session
-GlobalDefaultGameMode=/Game/Blueprints/ShowtimeCLient_GM.ShowtimeClient_GM_C
+GlobalDefaultGameMode=/Game/Blueprints/Lobby_GM.Lobby_GM_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
