--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,10 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=A511802E48CAA0FEBAEB9A8E667CA256
+CompanyName=Victoria University of Wellington
+CompanyDistinguishedName=CN=Victoria University of Wellington
+ProjectName=Necto
+bStartInVR=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
