--- a/Plugins/OpenXRExtensions/OpenXRExtensions.uplugin
+++ b/Plugins/OpenXRExtensions/OpenXRExtensions.uplugin
@@ -19,6 +19,11 @@
 			"Name": "ColorScaleExtension",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit"
+		},
+		{
+			"Name": "DisplayRefreshRateExtension",
+			"Type": "Runtime",
+			"LoadingPhase": "PostConfigInit"
 		}
 	],
 	"Plugins": [
