Added color space extension

--- a/Plugins/OpenXRExtensions/OpenXRExtensions.uplugin
+++ b/Plugins/OpenXRExtensions/OpenXRExtensions.uplugin
@@ -24,6 +24,11 @@
 			"Name": "DisplayRefreshRateExtension",
 			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit"
+		},
+		{
+			"Name": "ColorSpaceExtension",
+			"Type": "Runtime",
+			"LoadingPhase": "PostConfigInit"
 		}
 	],
 	"Plugins": [
