Fixed duplicate inputs breaking controller tracking

--- a/NectoQuest.uproject
+++ b/NectoQuest.uproject
@@ -129,6 +129,16 @@
 				"Win64",
 				"HoloLens"
 			]
+		},
+		{
+			"Name": "OpenXRMsftHandInteraction",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win32",
+				"Win64",
+				"HoloLens",
+				"Android"
+			]
 		}
 	],
 	"TargetPlatforms": [
